Fix word break on featured pages

--- a/ckanext/sprout/assets/css/custom.css
+++ b/ckanext/sprout/assets/css/custom.css
@@ -128,6 +128,7 @@ a:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  word-break: break-all !important;
 }
 .card-text {
   font-size: 16px;
