--- a/ckanext/sprout/assets/less/_index.less
+++ b/ckanext/sprout/assets/less/_index.less
@@ -144,6 +144,7 @@ a:hover {
   height: 66px;
   align-items: center;
   justify-content: center;
+  word-break: break-all !important;
 }
 
 .card-text {
